# lvglcpp

./: CMakeLists.txt  lvglcpp.h
src/component/: LabeledSlider.cpp  LabeledSlider.hpp
src/page/: HomePage.cpp  HomePage.hpp  IPage.hpp  PageManager.cpp  PageManager.hpp  PageSelector.cpp  PageSelector.hpp
src/page/general/: HomePage.cpp  HomePage.hpp  SettingsPage.cpp  SettingsPage.hpp
